examples/test/testpolicy3066.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3066
  namespace: namespace181
spec:
  podSelector:
    matchLabels:
      key3: value8
      key2: value11
      key44: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value24
          key34: value24
      podSelector:
        matchLabels:
          key27: value22
          key11: value33
          key29: value11
